# research-agent

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  setup.py
app/: __init__.py  streamlit_app.py
src/agent/: __init__.py
src/mcp_servers/: __init__.py  memory_server.py
src/tools/: __init__.py  tool_registry.py
src/utils/: __init__.py  config.py
tests/: __init__.py  test_agent.py  test_tools.py
